--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="https://we-love-movies-capstone-backend.vercel.app"
+REACT_APP_API_URL="https://thinkful-movies-backend-yr14.onrender.com"
