--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="https://thinkful-movies-backend-yr14.onrender.com"
+REACT_APP_API_BASE_URL="https://thinkful-movies-backend-yr14.onrender.com"
